# sub_sim

./: CMakeLists.txt  README.md  package.xml
include/simulator/: PIDController.hpp  commandParser.hpp  utils.hpp
launch/: controller.launch  transdec.launch  upload.launch
meshes/: README.md  propeller.dae
models/ball/: model.config  model.sdf
models/ball/meshes/: ball.mtl
models/bat_bin/: model.config  model.sdf
models/bat_bin/meshes/: bat.mtl
models/buoy/: model.config  model.sdf
models/buoy/meshes/: buoy.mtl
models/gate/: model.config  model.sdf
models/gate/meshes/: gate.mtl  gate_collision.stl
models/octagon/: model.config  model.sdf
models/octagon/meshes/: octagon.mtl
models/transdec/: model.config  model.sdf
models/transdec/meshes/: transdec.dae  transdec_collision.stl
models/tribuoy/: model.config  model.sdf
models/tribuoy/meshes/: tribuoy.mtl  tribuoy_collision.stl
models/water/: model.config  model.sdf
models/wolf_bin/: model.config  model.sdf
models/wolf_bin/meshes/: wolf.mtl
robots/: default.xacro
scripts/: create_sim_ports.sh  hydrophone_node.py  randomize_props.py
src/: PIDController.cpp  commandParser.cpp  simulator.cpp  utils.cpp
urdf/: actuators.xacro  base.xacro  gazebo.xacro  sensors.xacro  snippets.xacro
worlds/: transdec.world
