<?xml version="1.0"?>
<package format="2">
  <name>simulator</name>
  <version>0.6.13</version>
  <description>
    Use UUV Simulator simulator to simulate mission in Gazebo. Includes a 
    Nautical-like PID controller to the simulator and a Transdec scene.
  </description>

  <maintainer email="craigwang1@gmail.com">Craig Wang</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>uuv_trajectory_control</exec_depend>
  <exec_depend>uuv_control_utils</exec_depend>
  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"
                gazebo_model_path="${prefix}/models"/>
  </export>
</package>
